<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_blue"
    android:id="@+id/registerLayout"
    tools:context=".view.RegisterActivity">

    <LinearLayout
        android:id="@+id/loginFields"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--        <ImageView-->
        <!--            android:id="@+id/twitterImageRegister"-->
        <!--            android:layout_width="200dp"-->
        <!--            android:layout_height="200dp"-->
        <!--            android:layout_marginStart="100dp"-->
        <!--            android:layout_marginTop="20dp"-->
        <!--            android:layout_marginEnd="100dp"-->
        <!--            android:layout_marginBottom="430dp"-->
        <!--            app:srcCompat="@drawable/twitter" />-->
        <TextView
            android:id="@+id/createAccountTitleText"
            android:text="@string/createAccountTitleText"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="50dp" />


        <EditText
            android:id="@+id/firstNameInput"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:paddingLeft="10dp"
            android:hint="@string/firstNameText"
            android:textColor="@color/black"
            android:background="@color/light_orange" />

        <EditText
            android:id="@+id/lastNameInput"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:paddingLeft="10dp"
            android:hint="@string/lastNameText"
            android:textColor="@color/black"
            android:background="@color/light_orange" />

        <EditText
            android:id="@+id/usernameInputRegister"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:paddingLeft="10dp"
            android:hint="@string/userNameText"
            android:textColor="@color/black"
            android:background="@color/light_orange" />

        <EditText
            android:id="@+id/passwordInputRegister"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:paddingLeft="10dp"
            android:hint="@string/passwordText"
            android:inputType="textVisiblePassword|textPassword"
            android:textColor="@color/black"
            android:background="@color/light_orange" />

        <EditText
            android:id="@+id/confirmPasswordInputRegister"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:paddingLeft="10dp"
            android:hint="@string/confirmPasswordText"
            android:inputType="textVisiblePassword|textPassword"
            android:textColor="@color/black"
            android:background="@color/light_orange" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/registerButton"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:background="@color/main_orange" />

    </LinearLayout>
</RelativeLayout>