<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_blue"
    android:id="@+id/loginActivity"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:id="@+id/loginFields"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="180dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:text="@string/loginTitleText"
            android:textColor="@color/white"
            android:textSize="60dp" />

        <EditText
            android:id="@+id/usernameInputLogin"
            android:hint="@string/userNameText"
            android:layout_gravity="center"
            android:layout_height="40dp"
            android:layout_width="250dp"
            android:layout_marginBottom="15dp"
            android:paddingLeft="10dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:background="@color/light_orange" />

        <EditText
            android:id="@+id/passwordInputLogin"
            android:layout_width="250dp"
            android:hint="@string/passwordText"
            android:layout_gravity="center"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:paddingLeft="10dp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:background="@color/light_orange" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:text="@string/signInButton"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:background="@color/main_orange" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:text="@string/registerButton"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:background="@color/gold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>