<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="7dp"
    android:paddingTop="7dp"
    android:paddingRight="7dp"
    android:paddingBottom="7dp"
    android:background="@color/main_blue">

    <ImageView
        android:id="@+id/ItemImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:contentDescription="@string/item_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_toRightOf="@id/ItemImage"
        android:layout_toEndOf="@id/ItemImage">

        <TextView
            android:id="@+id/ItemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"
            tools:text="@string/sampleTitle"
            android:gravity="center_horizontal" />
        <TextView
            android:id="@+id/ItemSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAlignment="center"
            tools:text="@string/sampleSubtitle"
            android:gravity="center_horizontal" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10sp"
        android:background="@color/black"
        android:layout_below="@id/ItemImage"/>
</RelativeLayout>