<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="7dp"
    android:paddingTop="7dp"
    android:paddingRight="7dp"
    android:paddingBottom="7dp"
    android:background="@color/main_blue">

    <ImageView
        android:id="@+id/UserImage"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerVertical="true"
        android:padding="10sp"
        android:background="@drawable/layout_bg"
        android:contentDescription="@string/user_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_toRightOf="@id/UserImage"
        android:layout_toEndOf="@id/UserImage">

        <TextView
            android:id="@+id/UserTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"
            tools:text="@string/sampleTitle"
            android:gravity="center_horizontal" />
        <TextView
            android:id="@+id/UserSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAlignment="center"
            tools:text="@string/sampleSubtitle"
            android:gravity="center_horizontal" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="30sp"
        android:background="@color/black"
        android:layout_below="@id/UserImage"/>
</RelativeLayout>